After Session 8 part 1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^6.2.1
   provider: ^6.1.2
   shared_preferences: ^2.2.3
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +56,14 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/
+    - assets/anim/
+
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: "assets/fonts/montserrat.ttf"
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
